<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        style="@style/Widget.CardContent.Vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.piticlistudio.playednext.ui.widget.CustomTextView
            style="@style/Widget.CardContent.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/game_detail_info_label_title"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableRow
                android:id="@+id/developer_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="5dip"
                android:showDividers="end">

                <com.piticlistudio.playednext.ui.widget.CustomTextView
                    style="@style/AppTheme.LatoBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/game_detail_developers_title"
                    android:textStyle="bold"/>

                <com.piticlistudio.playednext.ui.widget.CustomTextView
                    android:id="@+id/developer"
                    style="@style/AppTheme.Lato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@string/lorem"/>

            </TableRow>

            <TableRow
                android:id="@+id/publisher_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="5dip"
                android:showDividers="end">

                <com.piticlistudio.playednext.ui.widget.CustomTextView
                    style="@style/AppTheme.LatoBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/game_detail_publishers_title"
                    android:textStyle="bold"/>

                <com.piticlistudio.playednext.ui.widget.CustomTextView
                    android:id="@+id/publisher"
                    style="@style/AppTheme.Lato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@string/lorem"/>

            </TableRow>

            <TableRow
                android:id="@+id/genre_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="5dip"
                android:showDividers="end">

                <com.piticlistudio.playednext.ui.widget.CustomTextView
                    style="@style/AppTheme.LatoBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/game_detail_genres_title"
                    android:textStyle="bold"/>

                <com.piticlistudio.playednext.ui.widget.CustomTextView
                    android:id="@+id/genre"
                    style="@style/AppTheme.Lato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@string/lorem"/>

            </TableRow>

            <TableRow
                android:id="@+id/saga_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:showDividers="end">

                <com.piticlistudio.playednext.ui.widget.CustomTextView
                    style="@style/AppTheme.LatoBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/game_detail_saga_title"
                    android:textStyle="bold"/>


                <com.piticlistudio.playednext.ui.widget.CustomTextView
                    android:id="@+id/saga"
                    style="@style/AppTheme.Lato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@string/lorem"
                    android:textAlignment="center"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
